Modifications in order to compile on Ubuntu Linux (14.04): remove CFLAGS -stdlib=libstdc++ from Makefile, and add #include <stdio.h> and #include <stdlib.h> to files with sprintf() and exit() statements, respectively. The code compiles both on Ubuntu Linux and on Mac OS 10.6.8

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 LIBS     =   -lm
 
-CFLAGS   =  -O3 -g -pg -stdlib=libstdc++
+#CFLAGS   =  -O3 -g -pg -stdlib=libstdc++
+CFLAGS   =  -O3 -g -pg
 
 CC       =   c++
 
@@ -12,10 +13,10 @@ all:		$(PROGS)
 
 dolly:		$(OBJECTS)
 		$(CC) $(CFLAGS) $(OBJECTS) $(LIBS) -o dolly
-		
+
 main.o:	main.cpp
 		$(CC) $(CFLAGS) -c main.cpp
-		
+
 AncestralProbabilities.o:	AncestralProbabilities.cpp
 		$(CC) $(CFLAGS) -c AncestralProbabilities.cpp
 
@@ -27,7 +28,7 @@ CharacterChanges.o:	CharacterChanges.cpp
 
 Clades.o:	Clades.cpp
 		$(CC) $(CFLAGS) -c Clades.cpp
-		
+
 Data.o:	Data.cpp
 		$(CC) $(CFLAGS) -c Data.cpp
 
@@ -42,13 +43,13 @@ Model.o:	Model.cpp
 
 Msg.o:	Msg.cpp
 		$(CC) $(CFLAGS) -c Msg.cpp
-		
+
 Node.o:	Node.cpp
 		$(CC) $(CFLAGS) -c Node.cpp
-		
+
 Settings.o:	Settings.cpp
 		$(CC) $(CFLAGS) -c Settings.cpp
-		
+
 Tree.o:	Tree.cpp
 		$(CC) $(CFLAGS) -c Tree.cpp
 
